Part4_Kubernetes/Chapter09/Ch09_05-security-troubleshooting/k8s-manifests/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-2048
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/name: app-2048
